# GameInADay

./: Makefile  README.md
games/NumberDungeon/: assets.piskel
games/NumberDungeon/src/: main.cpp
internal/: CMakeLists.txt
internal/bash/: compile_deps.sh  compile_sdl3.sh  compile_sdl3_image.sh
